--- a/index_es.html
+++ b/index_es.html
@@ -114,7 +114,7 @@
         <center>
         <h1>Josué Tonelli Cueto</h1>
         <h2>Matemático</h2>
-        <h3><a href="https://www.sciencesmaths-paris.fr/en/post-doctoral-laureats-298.htm">Reclutado Postdoctoral de la FSMP</a> en el <a href="https://team.inria.fr/ouragan/">equipo OURAGAN</a><br/>en <a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a> e <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h3>
+        <h3>Postdoc en<br/><a href="https://www.utsa.edu/">The University of Texas at San Antonio</a></h3>
         <h4 style="color:#ee2523;font-variant: small-caps;">Buscando un trabajo</h4>
         </center>
         <div class="row" align="center" style="padding-top:1vw;font-size:2vw;">
@@ -228,7 +228,7 @@
       for (i = 0; i < x.length; i++) {
        x[i].style="font-size:1em;font-weight:bold;";
     }
-    x[0].innerHTML='Investigador postdoctoral<br/>en<br/><a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a> e <a href="https://www.imj-prg.fr/">IMJ-PRG</a>';
+    x[0].innerHTML='Postdoc en<br/><a href="https://www.utsa.edu/">UT San Antonio</a>';
     x = document.getElementsByClassName("jumbotron");
      x[0].style="margin-bottom: 0.4em;";
     x = document.getElementsByClassName("col-md-5");
