--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <center>
         <h1>Josué Tonelli&#8209;Cueto</h1>
         <h2>Mathematician</h2>
-        <h3><a href="https://www.sciencesmaths-paris.fr/en/post-doctoral-laureats-298.htm">FSMP Postdoctoral Fellow</a> at the <a href="https://team.inria.fr/ouragan/">OURAGAN team</a><br/>in <a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h3>
+        <h3>Postdoc at<br/><a href="https://www.utsa.edu/">The University of Texas at San Antonio</a></h3>
         <h4 style="color:#ee2523;font-variant: small-caps;">In the Job Market</h4>
         </center>
         <div class="row" align="center" style="padding-top:1vw;font-size:2vw;"><!--3vw padding top if not searching for a job-->
@@ -230,7 +230,7 @@
       for (i = 0; i < x.length; i++) {
        x[i].style="font-size:1em;font-weight:bold;";
     }
-    x[0].innerHTML='Postdoctoral Researcher<br/>at<br/><a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a>';
+    x[0].innerHTML='Postdoc at<br/><a href="https://www.utsa.edu/">UT San Antonio</a>';
     x = document.getElementsByClassName("jumbotron");
      x[0].style="margin-bottom: 0.4em;";
     x = document.getElementsByClassName("col-md-5");
