--- a/cv.html
+++ b/cv.html
@@ -550,15 +550,14 @@
       <div class="pretalktitle"></div><div class="collaborator">Accepted to the Special Issue of ISSAC'20 of the <a href="https://www.journals.elsevier.com/journal-of-symbolic-computation"><i>Journal of Symbolic Computation</i></a>. This is a journal version of <em>Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</em>.</div>
       </div>
 
-      <br/><div class="cv">
-      <div class="year"></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> and <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a>)</div>
-       <div class="pretalktitle"></div><div class="collaborator">Accepted to <a href="https://www.springer.com/journal/454/"><i>Discrete & Computational Geometry</i></a>. This is a journal version of <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
-      </div>
-
       <br/><div class="row"><div class="col-md-12">
       <h3>Journal papers</h3>
       </div></div>
+
+      <br/><div class="cv">
+      <div class="year"></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
+       <div class="pretalktitle"></div><div class="collaborator">A.A. Ergür, F. Cucker and J. Tonelli-Cueto. On the Complexity of the Plantinga-Vegter Algorithm, <i>Discrete & Computational Geometry</i>, 2022. <!--First on-line: January 2021.--> <span><a href="https://doi.org/10.1007/s00454-022-00403-x">DOI 10.1007/s00454-022-00403-x</a></span> Journal version of <em>Plantinga-Vegter algorithm takes average polynomial time</em>. <span><a style="color:#FF69B4;" href="https://rdcu.be/cUAbS">[SharedIt LINK]</a></span>
+      </div>
 
       <br/><div class="cv">
       <div class="year"><h4>2021</h4></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. II: General Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1903.10710" role="button">arXiv:1903.10710</a></h4></div>
