--- a/research.html
+++ b/research.html
@@ -193,19 +193,20 @@
    <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> and <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a>)</div>
   </div>
 
-  <br/><div class="cv">
-  <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<br/>&emsp;I: Univariate Polynomials and Hypersurfaces<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
-  <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://who.paris.inria.fr/Elias.Tsigaridas/">Elias Tsigaridas</a>)</div>
-  <div class="pretalktitle"></div><div class="collaborator">Accepted to the Special Issue of ISSAC'20 of the <a href="https://www.journals.elsevier.com/journal-of-symbolic-computation"><i>Journal of Symbolic Computation</i></a>. This is a journal version of <em>Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</em>.</div>
-  </div>
-
 <hr>
 <div id="journalpapers">
   <h2 class="display-4">Journal papers</h2>
 
   <br/><div class="cv">
+  <div class="year"><h4>2023</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<br/>&emsp;I: Univariate Polynomials and Hypersurfaces<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto and E. Tsigaridas. Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces, <i>Journal of Symbolic Computation</i>, 115:142-173, 2023. First on-line: August 2022. <span><a href="https://doi.org/10.1016/j.jsc.2022.08.013">DOI 10.1016/j.jsc.2022.08.013</a></div>
+   <div class="pretalktitle"></div><div class="collaborator">Journal version of <em>Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</em> in the Special Issue of ISSAC'20.</div>
+  </div>
+
+  <br/><div class="cv">
   <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
-   <div class="pretalktitle"></div><div class="collaborator">A.A. Ergür, F. Cucker and J. Tonelli-Cueto. On the Complexity of the Plantinga-Vegter Algorithm, <i>Discrete & Computational Geometry</i>, 2022. <!--First on-line: January 2021.--> <span><a href="https://doi.org/10.1007/s00454-022-00403-x">DOI 10.1007/s00454-022-00403-x</a></span> Journal version of <em>Plantinga-Vegter algorithm takes average polynomial time</em>. <span><a style="color:#FF69B4;" href="https://rdcu.be/cUAbS">[SharedIt LINK]</a></span>
+   <div class="pretalktitle"></div><div class="collaborator">A.A. Ergür, F. Cucker and J. Tonelli-Cueto. On the Complexity of the Plantinga-Vegter Algorithm, <i>Discrete & Computational Geometry</i>, 2022. <!--First on-line: January 2021.--> <span><a href="https://doi.org/10.1007/s00454-022-00403-x">DOI 10.1007/s00454-022-00403-x</a></span><span><a style="color:#FF69B4;" href="https://rdcu.be/cUAbS">[SharedIt LINK]</a></span></div>
+   <div class="pretalktitle"></div><div class="collaborator">Journal version of <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
   </div>
 
   <br/><div class="cv">
@@ -240,7 +241,7 @@
   </div>
 
   <br/><div class="cv">
-   <div class="year"></div><div class="paper"><h4>&emsp;Generalized Perron roots and solvability of the absolute value equation</h4></div>
+   <div class="year"></div><div class="paper"><h4>&emsp;Generalized Perron roots and solvability of the absolute value equation<a class="btn btn-arxiv" href="https://hal.inria.fr/hal-03739462" role="button">hal-03739462</a></h4></div>
    <div class="pretalktitle"></div><div class="collaborator">M. Radons and J. Tonelli-Cueto. Generalized Perron roots and solvability of the absolute value equation. In L.F. Tabera Alonso (ed.), <a href="https://dmd2022.unican.es/"><i>Discrete Mathematics Days 2022</i></a>, pages 237-242. Editorial Universidad de Cantabria, 2022. <span><a href="https://doi.org/10.22429/Euc2022.016">DOI 10.22429/Euc2022.016</a></span></div>
   </div>
 
