--- a/research_es.html
+++ b/research_es.html
@@ -243,7 +243,7 @@
   </div>
 
   <br/><div class="cv">
-   <div class="year"></div><div class="paper"><h4>&emsp;Generalized Perron roots and solvability of the absolute value equation<a class="btn btn-arxiv" href="https://hal.inria.fr/hal-03739462" role="button">hal-03739462</a></h4></div>
+   <div class="year"></div><div class="paper"><h4>&emsp;Generalized Perron roots and solvability of the absolute value equation<a class="btn btn-hal" href="https://hal.inria.fr/hal-03739462" role="button">hal-03739462</a></h4></div>
    <div class="pretalktitle"></div><div class="collaborator">M. Radons y J. Tonelli-Cueto. Generalized Perron roots and solvability of the absolute value equation (Inglés) [Raíces generalizadas de Perron y la ecuación del valor absoluto]. En L.F. Tabera Alonso (ed.), <a href="https://dmd2022.unican.es/"><i>Discrete Mathematics Days 2022</i></a>, páginas 237-242. Editorial Universidad de Cantabria, 2022. <span><a href="https://doi.org/10.22429/Euc2022.016">DOI 10.22429/Euc2022.016</a></span></div>
   </div>
 
