--- a/research.html
+++ b/research.html
@@ -205,7 +205,7 @@
 
   <br/><div class="cv">
   <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
-   <div class="pretalktitle"></div><div class="collaborator">A.A. Ergür, F. Cucker and J. Tonelli-Cueto. On the Complexity of the Plantinga-Vegter Algorithm, <i>Discrete & Computational Geometry</i>, 2022. <!--First on-line: January 2021.--> <span><a href="https://doi.org/10.1007/s00454-022-00403-x">DOI 10.1007/s00454-022-00403-x</a></span><span><a style="color:#FF69B4;" href="https://rdcu.be/cUAbS">[SharedIt LINK]</a></span></div>
+   <div class="pretalktitle"></div><div class="collaborator">A.A. Ergür, F. Cucker and J. Tonelli-Cueto. On the Complexity of the Plantinga-Vegter Algorithm, <i>Discrete & Computational Geometry</i>, 2022. <!--First on-line: January 2021.--> <span><a href="https://doi.org/10.1007/s00454-022-00403-x">DOI 10.1007/s00454-022-00403-x</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cUAbS">[SharedIt LINK]</a></span></div>
    <div class="pretalktitle"></div><div class="collaborator">Journal version of <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
   </div>
 
@@ -241,7 +241,7 @@
   </div>
 
   <br/><div class="cv">
-   <div class="year"></div><div class="paper"><h4>&emsp;Generalized Perron roots and solvability of the absolute value equation<a class="btn btn-arxiv" href="https://hal.inria.fr/hal-03739462" role="button">hal-03739462</a></h4></div>
+   <div class="year"></div><div class="paper"><h4>&emsp;Generalized Perron roots and solvability of the absolute value equation<a class="btn btn-hal" href="https://hal.inria.fr/hal-03739462" role="button">hal-03739462</a></h4></div>
    <div class="pretalktitle"></div><div class="collaborator">M. Radons and J. Tonelli-Cueto. Generalized Perron roots and solvability of the absolute value equation. In L.F. Tabera Alonso (ed.), <a href="https://dmd2022.unican.es/"><i>Discrete Mathematics Days 2022</i></a>, pages 237-242. Editorial Universidad de Cantabria, 2022. <span><a href="https://doi.org/10.22429/Euc2022.016">DOI 10.22429/Euc2022.016</a></span></div>
   </div>
 
